fix: adjust spacing in social media section for improved layout

--- a/styles/style.css
+++ b/styles/style.css
@@ -880,7 +880,7 @@ nav a:active {
 .social-media {
   display: flex;
   justify-content: center;
-  gap: 20px;
+  gap: 5px;
   font-size: 2.5rem;
   margin-top: 12px;
   color: #00c9ff;
@@ -890,7 +890,7 @@ nav a:active {
   color: #fff;
   font-size: 1.5rem;
   transition: color 0.3s, transform 0.3s;
-  margin: 10px;
+  margin: 7px;
 }
 
 .social-media a:hover {
